tests/errors/interpreter/negation_err.ny
uWu_nyaa() => {
    yomu(-"1")
}